<resources>
    <string name="app_name">TrackIt</string>
    <string name="toggle_prompt">Toggle for metric units:</string>
    <string name="toggle_button_name">Toggle</string>
    <string name="us_toggle_option">Imperial (US)</string>
    <string name="metric_toggle_option">Metric</string>
    <string name="enter_weight_prompt">Enter your weight (lbs/kgs)</string>
    <string name="weight_hint">Weight</string>
    <string name="enter_laps">Enter laps per mile/km</string>
    <string name="number_of_laps">Number of Laps</string>
    <string name="submit_button">Submit</string>
    <string name="start_resume_button">Start/Resume</string>
    <string name="pause_button_text">Pause</string>
    <string name="stop_button_text">Stop</string>
    <string name="new_lap_button_text">New Lap</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="new_lap_button">New Lap</string>
    <string name="lap_num_text">Lap #</string>
    <string name="lap_time_text">Lap Time</string>
    <string name="lap_num">1</string>
    <string name="lap_time">0:00</string>
    <string name="total_time_text">Total Time:</string>
    <string name="total_time">00:00</string>
    <string name="total_distance_text">Total Distance:</string>
    <string name="distance_units">0.00</string>
    <string name="dist_units">mi</string>
    <string name="average_speed_text">Average Speed:</string>
    <string name="average_speed">0.00</string>
    <string name="avg_speed_unitz">mi/h</string>
    <string name="previous_lap">Previous Lap:</string>
    <string name="prev_lap_units">0.00</string>
    <string name="prev_lap_units2">mi/h</string>
    <string name="calories_burned_text">Calories Burned:</string>
    <string name="cals_burned">0</string>
    <string name="reset_button">Reset</string>
    <string name="back_button">Back</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="workout_summary"><u>Workout Summary</u></string>
    <string name="total_time2">Total Time:</string>
    <string name="timedefault">0:00:00</string>
    <string name="total_distance2">Total Distance:</string>
    <string name="totaldistance2">00.00</string>
    <string name="total_distancefinal">Total Distance:</string>
    <string name="total_timefinal">Total Time:</string>
    <string name="totaltimenumfinal">0:00:00</string>
    <string name="TotalDistanceNumFinal">00.00</string>
    <string name="totalDistanceFinalUnits">mi</string>
    <string name="average_speedFinal">Average Speed:</string>
    <string name="averageSpeedNumFinal">0.00</string>
    <string name="avgSpeedFinalUnits">mi/h</string>
    <string name="calories_burnedFinal">Calories Burned:</string>
    <string name="calsBurnedNumFinal">0.0</string>
    <string name="way_to_go">Way to Go!</string>
    <string name="start_over">Start Over</string>
    <string name="average_pace">Average Pace:</string>
    <string name="min_mi2">min/mi</string>
    <string name="prev_lap_pace">Prev. Lap Pace:</string>
    <string name="min_mi">min/mi</string>
    <string name="_00_00">00:00</string>
    <string name="_00_001">00:00</string>
</resources>
